# that-night-sky

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  app.py  localdocs  pyproject.toml  starchart.py
.claude/skills.nouse/microsoft-agent-framework-python/: SKILL.md
.claude/skills.nouse/openapi-to-application/: SKILL.md
.claude/skills.nouse/playwright-python/: SKILL.md
.claude/skills.nouse/python-mcp-server/: SKILL.md
.claude/skills/md-janitor/: SKILL.md
.claude/skills/python-mcp-expert/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
docs/: README.md  setup-cloudflare.md  setup-docker.md  setup-streamlit-cloud.md
src/thatnightsky/: __init__.py  app.py  compute.py  i18n.py  models.py  narrative.py  starchart.py
src/thatnightsky/renderers/: plotly_2d.py  static.py  svg_2d.py
